--- a/style.css
+++ b/style.css
@@ -1,33 +1,80 @@
-html {
-  font-size: 20px;
+.top {
+   width: 800px;
+   background-color:#dcc9f4;
+   padding: auto;
+   margin: 20px auto;
+   text-align: center;
 }
 
-body {
-  font-family: "Arial", "Meiryo", sans-serif;
-  text-align: center;
+.top-child {
+    width: 20%;
+    background-color:#ffd9df;
+    text-align: center;
+    display: inline-block;
 }
 
-h1 {
-  /* Google Fontを指定します */
-   font-family: "Josefin Sans", sans-serif;
-   font-optical-sizing: auto;
-   font-weight: 400;
-   font-size: 2rem;
-   font-style: normal;
-   letter-spacing: 1.2em;
-   border-bottom: solid 3px rgb( 115, 115, 114);
-   text-shadow: 2px 2px 3px black;
+.middle {
+     position: relative;
+    width: 800px;
+    height: 800px;
+    margin: 20px auto;
+    background-color: #ffd9df;
 }
 
-.text-pink {
-  color: rgb(255, 192, 203);
+#middle-child01 {
+     position: absolute;
+     top: 100px;
+     left: 100px;
+     width: 200px;
+     height: 200px;
+     background-color: #87ceeb;
 }
 
-.text-skyblue {
-  color: #a0d8ef
-  ;
+#middle-child02 {
+     position: absolute;
+     top: 300px;
+     left: 300px;
+     width: 200px;
+     height: 200px;
+     background-color: #87ceeb;
 }
 
-#parent p {
-  font-weight: bold;
+#middle-child03 {
+     position: absolute;
+     top: 500px;
+     left: 500px;
+     width: 200px;
+     height: 200px;
+     background-color: #87ceeb;
+}
+
+.bottom {
+     position: relative;
+     width: 800px;
+     height: 300px;
+     margin: 20px auto;
+
+     background-color: #87ceeb;
+}
+
+#bottom-child01 {
+     width: 400px;
+     height: 100px;
+     background-color: #e5dcf0;
+}
+
+#bottom-child02 {
+     width: 400px;
+     height: 100px;
+     position: relative;
+     left: 200px;
+     background-color: #e5dcf0;
+}
+
+#bottom-child03 {
+     width: 400px;
+     height: 100px;
+     position: relative;
+     left: 400px;
+     background-color: #e5dcf0;
 }
